# rest-framework-tutorial

./: .gitignore  README.md  pyproject.toml
snippets/: models.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
tutorial/: settings.py
